# src/validation/category.validation.js
@@ -1,8 +1,8 @@
 const Joi = require('joi');
 
 const getCategory = {
-    query: Joi.object().keys({
-        get_cat_id: Joi.string().required()
+    params: Joi.object().keys({
+        category_id: Joi.string().required()
     })
 }
 
